--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.oneops</groupId>
@@ -9,7 +8,7 @@
     </parent>
 
     <artifactId>secrets-proxy</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
     <packaging>jar</packaging>
 
     <name>OneOps Secrets Proxy</name>
@@ -26,7 +25,7 @@
     <scm>
         <developerConnection>scm:git:git@github.com:oneops/secrets-proxy.git</developerConnection>
         <url>https://github.com/oneops/secrets-proxy</url>
-        <tag>HEAD</tag>
+        <tag>release-1.2.0</tag>
     </scm>
 
     <issueManagement>
@@ -443,7 +442,7 @@
                                 <database>
                                     <name>org.jooq.util.postgres.PostgresDatabase</name>
                                     <includes>.*</includes>
-                                    <excludes/>
+                                    <excludes />
                                     <inputSchema>public</inputSchema>
                                 </database>
                                 <target>
