--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -59,8 +59,8 @@ jetty:
 # Proxy Configuration
 # ===================
 oneops:
-  authenticationURL: http://localhost:9000/api/v1/access
-  authorizationCode: dGVzdA==
+  authenticationURL: ${AUTHENTICATION_URL}/api/v1/access
+  authorizationCode: ${AUTHORIZATION_CODE}
   keywhiz:
     base-url: https://keywhiz.com:4444/
     svc-user: ${KEYWHIZ_USER}
