--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -64,6 +64,9 @@ oneops:
     svc-user: ${KEYWHIZ_USER}
     svc-password: ${KEYWHIZ_PASS}
     secret-max-size: ${KEYWHIZ_SECRET_MAX_SIZE:350000}
+    connect-timeout: ${KEYWHIZ_CONNECT_TIMEOUT}
+    read-timeout: ${KEYWHIZ_READ_TIMEOUT}
+    write-timeout: ${KEYWHIZ_WRITE_TIMEOUT}
     trust-store:
       path: classpath:keystores/keywhiz_truststore.p12
       type: pkcs12
