--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>secrets-proxy</artifactId>
-    <version>1.4.5</version>
+    <version>1.4.6-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>OneOps Secrets Proxy</name>
@@ -25,7 +25,7 @@
     <scm>
         <developerConnection>scm:git:git@github.com:oneops/secrets-proxy.git</developerConnection>
         <url>https://github.com/oneops/secrets-proxy</url>
-        <tag>release-1.4.5</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <issueManagement>
